# GenoSync

./: .gitignore  Dockerfile.api  Dockerfile.api.simple  Dockerfile.web  Dockerfile.web.simple  LOCAL_DEPLOY.md  LOCAL_DEPLOYMENT.md  README.md  SOLANA_IMPLEMENTATION_SUMMARY.md  SOLANA_MIGRATION.md  docker-compose.simple.yml  docker-compose.yml  install_expo.sh  package-lock.json  package.json  pnpm-lock.yaml  restart_expo_dev.sh  start-local.sh  start_android.sh  start_expo.sh
artifacts/api/: Dockerfile  build.mjs  package.json
artifacts/contracts/: .env.example  hardhat.config.ts  package.json  tsconfig.json
artifacts/mockup-sandbox/: package.json
artifacts/solana/programs/challenges/programs/challenges/: Cargo.toml
artifacts/solana/programs/challenges/programs/challenges/src/: lib.rs
artifacts/solana/programs/cnft/: Anchor.toml  Cargo.toml
artifacts/solana/programs/cnft/programs/cnft/src/: lib.rs
artifacts/web/: index.html  netlify.toml  package-lock.json  package.json  package.json.backup  package.simple.json  requirements.yaml  vite.config.ts
infra/aws/: README.md  cloudformation-bioledger.yml  cloudformation-genosync.yml  deploy-api.sh  deploy-frontend.sh  ecs-task-definition.json
lib/api-client-react/: package-lock.json  package.json
lib/api-spec/: package.json
lib/api-zod/: package.json
lib/db/: package.json
openrouter-client/: README.md  agent-runner.mjs  dispatcher.mjs  example.ts  package-lock.json  package.json  tasks-config.mjs  tsconfig.json
scripts/: deploy-local.sh  package.json  start-local-tsx.sh  start-local.sh
(+125 files in other folders)
